[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ada_data_analytic_on_remote_server"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "vok889" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["ada_data_analytic_on_remote_server"]
include = ["pyproject.toml", "ada_data_analytic_on_remote_server/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ada_data_analytic_on_remote_server"]
force-sort-within-sections = true

